syntax = "proto3";

package location;

service LocationService {
  rpc UpdateVendorLocation (LocationUpdate) returns (Empty) {}
  rpc VendorLocations (VendorLocationRequest) returns (VendorLocationResponse) {}
}

message Empty {

}

message VendorLocationRequest {
    Location swLocation = 1;
    Location neLocation = 2;
}

message Vendor {
    string id = 1;
    double dist = 2;
    Location location = 3;
}

message VendorLocationResponse {
    repeated Vendor vendors = 2;
}

message Location {
    double long = 1;
    double lat = 2;
}

message LocationUpdate {
    Location location = 1;
    string entityId = 2;
}